--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-02-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ViktorSvertoka.github.io/goit-react-hw-02-phonebook/",
+  "homepage": "https://ciplator.github.io/goit-react-hw-02-phonebook/",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
